// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectedSamplesLabel /> should render 1`] = `
<label
  className="control-label"
>
  Sample
</label>
`;

exports[`<SelectedSamplesLabel /> should return when [count>1] 1`] = `
<label
  className="control-label"
>
  Sample
  s 
  <Badge>
    2
  </Badge>
</label>
`;
